# WinRemoteConsole

./: CMakeLists.txt  README.md
scripts/: build.bat  deploy.bat  run.bat  test.bat
src/: common.h  main.cpp
src/client/: client.cpp  client.h
src/server/: server.cpp  server.h
src/service/: service.cpp  service.h
src/wrappers/: socket_wrapper.cpp  socket_wrapper.h
